Crash When Muting Group Nodes Containing Join Geometry Node #93555

Closed
opened 2021-12-02 00:27:24 +01:00 by Gerstmann Bradley · 11 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11

Blender Version
Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-30 14:40, hash: 3788003cda
Caused by b55bddde40

Short description of error
Within the Node Tree, there are two group nodes.
Hit "M" to mute them will cause immediate crash.
image.png
image.png
REPORT2.blend
REPORT2.crash.txt

**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.11 **Blender Version** Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-30 14:40, hash: `3788003cda` Caused by b55bddde40 **Short description of error** Within the Node Tree, there are two group nodes. Hit "M" to mute them will cause immediate crash. ![image.png](https://archive.blender.org/developer/F12676241/image.png) ![image.png](https://archive.blender.org/developer/F12676244/image.png) [REPORT2.blend](https://archive.blender.org/developer/F12676237/REPORT2.blend) [REPORT2.crash.txt](https://archive.blender.org/developer/F12676240/REPORT2.crash.txt)

Added subscriber: @Bradley_G

Added subscriber: @Bradley_G
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Looks like a regression.

Will bisect.

blender.exe         :0x00007FF6BBD39E00  blender::move_assign_container<blender::Array<blender::SimpleMapSlot<enum GeometryComponentType,ble C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_memory_utils.hh:544
blender.exe         :0x00007FF6BBD3A0E0  blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonPr C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_map.hh:204
blender.exe         :0x00007FF6BBD3A2F0  GeometrySet::GeometrySet C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\geometry_set.cc:111
blender.exe         :0x00007FF6BC284360  blender::uninitialized_move_n<GeometrySet> C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_memory_utils.hh:214
blender.exe         :0x00007FF6BC090DF0  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:476
blender.exe         :0x00007FF6BC090C60  blender::modifiers::geometry_nodes::evaluate_geometry_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1923
blender.exe         :0x00007FF6BC050430  compute_geometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1014
blender.exe         :0x00007FF6BC052D60  modifyGeometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1122
blender.exe         :0x00007FF6BBD7AC50  modifier_modify_mesh_and_geometry_set C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:922
blender.exe         :0x00007FF6BBD799A0  mesh_calc_modifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1253
blender.exe         :0x00007FF6BBD796A0  mesh_build_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1895
blender.exe         :0x00007FF6BBD7BC80  makeDerivedMesh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:2025
blender.exe         :0x00007FF6BBD9B7D0  BKE_object_handle_data_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:204
blender.exe         :0x00007FF6BBD9B560  BKE_object_eval_uber_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:401
blender.exe         :0x00007FF6BBF80EF0  blender::deg::`anonymous namespace'::evaluate_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:120
blender.exe         :0x00007FF6BBF80EA0  blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:132
blender.exe         :0x00007FF6BC8A5400  BLI_task_pool_push C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:485
blender.exe         :0x00007FF6BBF80F90  blender::deg::`anonymous namespace'::schedule_node_to_pool C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:79
blender.exe         :0x00007FF6BBF80770  blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:299
blender.exe         :0x00007FF6BBF80770  blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:306
blender.exe         :0x00007FF6BBF80770  blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:306
blender.exe         :0x00007FF6BC8A5400  BLI_task_pool_push C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:485
blender.exe         :0x00007FF6BBF80F90  blender::deg::`anonymous namespace'::schedule_node_to_pool C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:79
blender.exe         :0x00007FF6BBF80770  blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:299
blender.exe         :0x00007FF6BBF80770  blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:306
blender.exe         :0x00007FF6BC8A5520  BLI_task_pool_work_and_wait C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:500
blender.exe         :0x00007FF6BBF80A20  blender::deg::deg_evaluate_on_refresh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:408
blender.exe         :0x00007FF6BBC5F360  scene_graph_update_tagged C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.c:2613
blender.exe         :0x00007FF6BBB9FDD0  wm_event_do_notifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:622
blender.exe         :0x00007FF6BBB897F0  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:660
blender.exe         :0x00007FF6BBB84FD0  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:563
blender.exe         :0x00007FF6BC9815C8  __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF8D9FD7020  BaseThreadInitThunk
ntdll.dll           :0x00007FF8DABE2630  RtlUserThreadStart```
Hi, thanks for the report. Looks like a regression. Will bisect. ```lines blender.exe :0x00007FF6BBD39E00 blender::move_assign_container<blender::Array<blender::SimpleMapSlot<enum GeometryComponentType,ble C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_memory_utils.hh:544 blender.exe :0x00007FF6BBD3A0E0 blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonPr C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_map.hh:204 blender.exe :0x00007FF6BBD3A2F0 GeometrySet::GeometrySet C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\geometry_set.cc:111 blender.exe :0x00007FF6BC284360 blender::uninitialized_move_n<GeometrySet> C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_memory_utils.hh:214 blender.exe :0x00007FF6BC090DF0 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:476 blender.exe :0x00007FF6BC090C60 blender::modifiers::geometry_nodes::evaluate_geometry_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1923 blender.exe :0x00007FF6BC050430 compute_geometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1014 blender.exe :0x00007FF6BC052D60 modifyGeometry C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\modifiers\intern\MOD_nodes.cc:1122 blender.exe :0x00007FF6BBD7AC50 modifier_modify_mesh_and_geometry_set C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:922 blender.exe :0x00007FF6BBD799A0 mesh_calc_modifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1253 blender.exe :0x00007FF6BBD796A0 mesh_build_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1895 blender.exe :0x00007FF6BBD7BC80 makeDerivedMesh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\DerivedMesh.cc:2025 blender.exe :0x00007FF6BBD9B7D0 BKE_object_handle_data_update C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:204 blender.exe :0x00007FF6BBD9B560 BKE_object_eval_uber_data C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.c:401 blender.exe :0x00007FF6BBF80EF0 blender::deg::`anonymous namespace'::evaluate_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:120 blender.exe :0x00007FF6BBF80EA0 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:132 blender.exe :0x00007FF6BC8A5400 BLI_task_pool_push C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:485 blender.exe :0x00007FF6BBF80F90 blender::deg::`anonymous namespace'::schedule_node_to_pool C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:79 blender.exe :0x00007FF6BBF80770 blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:299 blender.exe :0x00007FF6BBF80770 blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:306 blender.exe :0x00007FF6BBF80770 blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:306 blender.exe :0x00007FF6BC8A5400 BLI_task_pool_push C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:485 blender.exe :0x00007FF6BBF80F90 blender::deg::`anonymous namespace'::schedule_node_to_pool C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:79 blender.exe :0x00007FF6BBF80770 blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:299 blender.exe :0x00007FF6BBF80770 blender::deg::`anonymous namespace'::schedule_children<void __cdecl(blender::deg::OperationNode *,i C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:306 blender.exe :0x00007FF6BC8A5520 BLI_task_pool_work_and_wait C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:500 blender.exe :0x00007FF6BBF80A20 blender::deg::deg_evaluate_on_refresh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:408 blender.exe :0x00007FF6BBC5F360 scene_graph_update_tagged C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.c:2613 blender.exe :0x00007FF6BBB9FDD0 wm_event_do_notifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:622 blender.exe :0x00007FF6BBB897F0 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:660 blender.exe :0x00007FF6BBB84FD0 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:563 blender.exe :0x00007FF6BC9815C8 __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF8D9FD7020 BaseThreadInitThunk ntdll.dll :0x00007FF8DABE2630 RtlUserThreadStart```
Member

Caused by b55bddde40

@JacquesLucke , this appears to be your commit. Can you check this?


Muting Group Nodes Containing Join Geometry Node

Not sure if Join Geometry node is responsible for crash. I can even reproduce without it.
(Do not have enough time at the moment to investigate further)

Caused by b55bddde40 @JacquesLucke , this appears to be your commit. Can you check this? --- > Muting Group Nodes Containing Join Geometry Node Not sure if `Join Geometry` node is responsible for crash. I can even reproduce without it. (Do not have enough time at the moment to investigate further)
Jacques Lucke self-assigned this 2021-12-02 09:32:09 +01:00

This issue was referenced by 68e3755209

This issue was referenced by 68e37552099231ff2b1beb6c7135dfa7fcc418e9

This issue was referenced by 198e571e87

This issue was referenced by 198e571e87eaefb7b7a89afcf5d44cfd24da7b2f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @Baardaap

Added subscriber: @Baardaap

This comment was removed by @Baardaap

*This comment was removed by @Baardaap*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93555
No description provided.